--- a/TestClient/TestClient.csproj
+++ b/TestClient/TestClient.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Connection\Connection.csproj" />
+    <ProjectReference Include="..\CSLogger\CSLogger.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
